Added screenshot for logical-constraint assignment

--- a/Assignments/Full-Node-App/Memory Game/frontend/index.html
+++ b/Assignments/Full-Node-App/Memory Game/frontend/index.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matching Game</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Card Matching Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="title">
-        <h1>Matching Game</h1>
-    </div>
-    
-    <div id="message"></div> <!-- Display game messages here -->
+  <h1>Card Matching Game</h1>
+  
+  <!-- Player selection buttons will be displayed here -->
+  <div id="player-select"></div>
 
-    <div id="game-board"></div> <!-- Game cards will be displayed here -->
+  <div id="game-board"></div>
+  <div id="message"></div>
 
-    <div id="score">Score: 0</div> <!-- Display the score -->
-
-    <div id="timer">00:00</div> <!-- Display the timer -->
-
-    <div id="best-time">Best Time: --</div> <!-- Display the best time --> 
-
-    <script src="app.js"></script> <!-- Frontend game logic -->
+  <script src="app.js"></script>
 </body>
 </html>
